# libxc-gpu

./: .gitignore  CMakeLists.txt  Makefile.am  configure.ac
scripts/: get_funcs.pl  runtest
src/: Makefile.am  func_info.c  func_reference.c  funcs_gga.c  funcs_hyb_gga.c  funcs_hyb_mgga.c  funcs_key.c  funcs_lda.c  funcs_mgga.c  functionals.c  genwiki.c  gga.c  gga_c_am05.c  gga_c_bcgp.c  gga_c_bmk.c  gga_c_cs1.c  gga_c_ft97.c  gga_c_gapc.c  gga_c_gaploc.c  gga_c_hcth_a.c  gga_c_lm.c  gga_c_lyp.c  gga_c_op_b88.c  gga_c_op_g96.c  gga_c_op_pbe.c  gga_c_op_pw91.c  gga_c_op_xalpha.c  gga_c_optc.c  gga_c_p86.c  gga_c_pbe.c  gga_c_pbe.cu  gga_c_pbeloc.c  gga_c_pw91.c  gga_c_q2d.c  gga_c_regtpss.c  gga_c_revtca.c  gga_c_scan_e0.c  gga_c_sg4.c  gga_c_sogga11.c  gga_c_tca.c  (+197 more)
src/helper/: Makefile  Makefile.am  Makefile.in  helper_cuda.h  helper_string.h
src/maple2c/: gga_c_am05.c  gga_c_bcgp.c  gga_c_bmk.c  gga_c_cs1.c  gga_c_ft97.c  gga_c_gapc.c  gga_c_gaploc.c  gga_c_hcth_a.c  gga_c_lm.c  gga_c_lyp.c  gga_c_op_b88.c  gga_c_op_g96.c  gga_c_op_pbe.c  gga_c_op_pw91.c  gga_c_op_xalpha.c  gga_c_optc.c  gga_c_p86.c  gga_c_pbe.c  gga_c_pbe.cu  gga_c_pbeloc.c  gga_c_pw91.c  gga_c_q2d.c  gga_c_regtpss.c  gga_c_revtca.c  gga_c_scan_e0.c  gga_c_sg4.c  gga_c_sogga11.c  gga_c_tca.c  gga_c_w94.c  gga_c_wi.c  gga_c_wl.c  gga_c_zpbeint.c  gga_c_zvpbeint.c  gga_k_dk.c  gga_k_meyer.c  gga_k_ol1.c  gga_k_ol2.c  gga_k_pearson.c  gga_k_tflw.c  gga_k_thakkar.c  (+129 more)
testsuite/: CMakeLists.txt  Makefile.am  template  template.cu  test001  test001.c  xc-consistency.c  xc-get_data.c  xc-regression.c  xc-regression.cu  xc-run_testsuite
testsuite/unit_test/: Makefile
testsuite/unit_test/work_gga_c/: Makefile  test_work_gga_c.cu
testsuite/unit_test/work_gga_x/: Makefile  test_work_gga_x  test_work_gga_x.cu
testsuite/unit_test/work_lda/: Makefile  test_functionals.cu
testsuite/unit_test/work_mgga_c/: test_functionals.cu
testsuite/unit_test/work_mgga_x/: test_functionals.cu
